fixed overflow hidden on question viewing

--- a/src/main/resources/static/css/general.css
+++ b/src/main/resources/static/css/general.css
@@ -74,7 +74,6 @@
 
 .modal{
     max-height: 80%;
-    overflow-y: hidden;
 }
 
 .card .card-content{
